--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@ body{
 	background:#eaeaea;
 	background-image: url("../images/witewall_3.png");
 	background-repeat: repeat;
+	overflow: visible;
 
 	}
 
